<resources>
    <!--General-->
    <string name="app_name">Pless</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>

    <!--Welcome Activity-->
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>

    <!--Login Activity-->
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <!--Login is covered by Welcome Activity-->
    <string name="forgot_password">Forgot Password?</string>
    <string name="email"> Enter  Email</string>

    <!--Homepage Activity-->
    <string name="create_template">Create Template</string>
    <string name="conduct_study">Conduct Study</string>
    <string name="export_template">Export Form</string>
    <string name="analyze_study">Analyze Study</string>

    <!--Template Creation-->
    <string name = "enter_sessionlog_name">Session Log Name</string>
    <string name = "enter_sessiondata_name">Session Data Field</string>
    <string name="enter_template_name">Enter Template Name</string>
    <string name="add_sessionLog">Add Session Log</string>
    <string name="add_sessionData">Add Session Data</string>
    <string name="enter_items_hint">EX: yes, no, maybe</string>
    <string name = "hint">Hint: Use commas for Toggle Buttons and Checkboxes</string>


    <string-array name="input_types">
        <item>Text</item>
        <item>ToggleButtons</item>
        <item>Checkboxes</item>
    </string-array>

    <!--Create Account-->
    <string name="submit_createAccount">Create Account</string>
    <string name="title_activity_conduct_study">ConductStudy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
