<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_user"
        android:layout_width="@dimen/text_input_width"
        android:layout_height="@dimen/text_input_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="@dimen/text_input_width"
        android:layout_height="@dimen/text_input_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:onClick="login"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="375dp"
        android:clickable="true"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password" />
</RelativeLayout>