<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".activities.AddSessionLog">


    <EditText
        android:id="@+id/session_log_name"
        android:layout_width="@dimen/text_input_width"
        android:layout_height="@dimen/text_input_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/enter_name" />

    <EditText
        android:id="@+id/session_log_content"
        android:layout_width="@dimen/text_input_width"
        android:layout_height="@dimen/text_input_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:hint="@string/enter_items_hint" />

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="@dimen/text_input_width"
        android:layout_height="@dimen/text_input_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"/>

    <Button
        android:id="@+id/add_session_log"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="325dp"
        android:onClick="addSessionLogField"
        android:text="@string/add_sessionLog" />

    <Button
        android:id="@+id/next"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="@dimen/small_button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="next"
        android:text="@string/next_button"
        />

    <Button
        android:id="@+id/back"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="@dimen/small_button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="back"
        android:text="@string/back_button" />
</RelativeLayout>