<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/create_study_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="createStudyTemplate"
        android:text="@string/create_template" />

    <Button
        android:id="@+id/conduct_study_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:onClick="selectStudy"
        android:text="@string/conduct_study" />

    <Button
        android:id="@+id/export_form_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:onClick="exportTemplate"
        android:text="@string/export_template" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="325dp"
        android:onClick="changePassword"
        android:text="Change Password" />


</RelativeLayout>